<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:weightSum="1"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_weight="0.9">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintRgLogin"
            android:layout_marginTop="10dp"
            android:textColor="@color/textNormalColor"
            android:textSize="16sp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintRgPassword"
            android:layout_marginTop="10dp"
            android:textColor="@color/textNormalColor"
            android:textSize="16sp"
            android:inputType="textPassword"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintRgCfPassword"
            android:layout_marginTop="10dp"
            android:textColor="@color/textNormalColor"
            android:textSize="16sp"
            android:inputType="textPassword"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintRgName"
            android:layout_marginTop="10dp"
            android:textColor="@color/textNormalColor"
            android:textSize="16sp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintRgBirth"
            android:layout_marginTop="10dp"
            android:textColor="@color/textNormalColor"
            android:textSize="16sp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="1"
            >
            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/textNormalColor"
                android:textSize="16sp"
                android:text="@string/txt_rg_term"/>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnCreate"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_shape"
            android:textColor="@color/colorWhite"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/txt_rg_account"/>
            <Button
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_rg_signin"
                android:background="@color/colorWhite"
                />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>